# waybox

./: .build.yml  meson.build  meson_options.txt
.github/: copilot-instructions.md
.github/workflows/: build.yml
data/: autostart  menu.xml  meson.build  rc.xml
include/waybox/: action.hpp  animation.hpp  applications.hpp  cursor.h  decor_mode.hpp  frame.hpp  frame_view.hpp  geometry.hpp  icon.hpp  keychain.hpp  listener.hpp  menu.hpp  menu_widget.hpp  mousebind.hpp  output.h  placement.hpp  render.hpp  scene_buffer.h  seat.h  server.h  style.hpp  switcher_widget.hpp  theme.hpp  wbconf.hpp  widget.hpp  window_cycle.hpp  wlroots.hpp  xdg_shell.h
po/: POTFILES.in  meson.build  waybox.pot
test/: action_test.cpp  animation_test.cpp  applications_test.cpp  decor_mode_test.cpp  frame_test.cpp  geometry_test.cpp  icon_test.cpp  keychain_test.cpp  lsan.supp  menu_parse_test.cpp  menu_test.cpp  meson.build  mousebind_test.cpp  placement_test.cpp  render_test.cpp  style_test.cpp  theme_test.cpp  wb_test.hpp  wb_test_main.cpp  wbconf_test.cpp  widget_test.cpp  window_cycle_test.cpp
test/integration/: alt_tab_test.py  app_rule_test.py  foreign_toplevel_test.py  key_chain_test.py  menu_test.py  mouse_binding_test.py  placement_test.py  ssd_test.py  window_state_test.py
waybox/: action.cpp  animation.cpp  applications.cpp  config.c  config.cpp  config.h  cursor.c  cursor.cpp  decor_mode.cpp  decoration.c  decoration.cpp  decoration.h  frame.cpp  frame_view.cpp  geometry.cpp  icon.cpp  idle.cpp  keychain.cpp  layer_shell.c  layer_shell.cpp  layer_shell.h  main.c  main.cpp  menu.cpp  menu_parse.cpp  menu_widget.cpp  meson.build  mousebind.cpp  output.c  output.cpp  placement.cpp  render.cpp  scene_buffer.cpp  seat.c  seat.cpp  server.c  server.cpp  style.cpp  switcher_widget.cpp  theme.cpp  (+5 more)
wbconf/: main.cpp  meson.build  wbconf.desktop
